--- a/CSCI372/.classpath
+++ b/CSCI372/.classpath
@@ -6,18 +6,18 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER">
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx.base.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx.controls.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx.fxml.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx.graphics.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx.media.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx.swing.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx.web.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/javafx-sdk-21.0.1/lib/javafx-swt.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Longl/OneDrive/Desktop/javafx-sdk-21.0.1/lib/javafx-swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
